--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Curriculum</title>
+    <title>Curriculum</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
@@ -13,7 +13,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
      <script src="/js/person.js"></script>
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header id="header">
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="educacion.html">Educación</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Experiencia</a>
+                    <a class="nav-link" href="experiencia.html">Experiencia</a>
                   </li>
                 </ul>
               </div>
@@ -44,7 +44,7 @@
     <section id="about" class="about">
         <div class="row">
             <div class="col-lg-4">
-              <img src="/img/about.jpg" class="img-fluid" alt="foto-perfil">
+              <img src="img/about.jpg" class="img-fluid" alt="foto-perfil">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Desarrolladora Web &amp; UI/UX Designer</h3>
